2021. 5.15. Added zeo_delaunay2d and zDelaunay2D. [zeo, zeo_delaunay2d]
2021. 5.15. Added zTri2DPointIsInside. [zeo_elem2d]
2021. 5.15. Corrected mismatch between prototype and definition of zOBB3D and zOBB3DPL. [zeo_bv3d_obb]
2021. 5.15. Applied zTreeClass and zTreeClassMethod to zeo_vec3d_tree. [zeo_vec3d_tree, zeo_ph_stl]
2021. 5.12. Modified zTri3DPointIsInside. [zeo_elem3d]
2021. 5.12. Reimplemented zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. [zeo_elem2d]
2021. 5.12. Added zEdge2D class. [zeo_elem2d]
2021. 5.12. Reimplemented zTri3DBarycenter, zTri3DCircumcenter, zTri3DIncenter and zTri3DOrthocenter. [zeo_elem3d]
2021. 5.11. Modified zAABB3D, zAABB3DXform, zAABB3DPL and zAABB3DXformPL. [zeo_bv3d_aabb]
2021. 5.11. Added zAABox2D, zAABB2D and zAABB2DPL. [zeo_bv2d_aabb, zeo_bv2d]
2021. 5.11. Renamed zOBB and zOBBPL to zOBB3D and zOBB3DPL, respectively. [zeo_bv3d_obb]
2021. 5.11. Modified some examples for bounding volume. [example]
2021. 5. 9. Modified specification of zBDisk2D. [zeo_bv2d_bdisk]
2021. 5. 9. Modified specification of zVec2DAddrListCreate. [zeo_vec2d_list]
2021. 5. 9. Modified specification of zBBall3D. [zeo_bv3d_bball]
2021. 5. 9. Modified specification of _zPH3DSweepBottom, zPH3DPrism and zPH3DPyramid. [zeo_ph]
2021. 5. 9. Modified specification of zTriangulate. [zeo_elem3d_list]
2021. 5. 9. Modified specification of zVec3DAddrListCreate and zLoop3DCreate. [zeo_vec3d_list, zeo_elem3d_list]
2021. 5. 9. Added zVec3DAddrListAppendArray. [zeo_vec3d_list]
2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
2021. 5. 7. Made tools/, and modified makefiles. [makefile, app, tools]
2021. 5. 7. Renamed zBDisk to zBDisk2D. [zeo_bv2d_bdisk]
2021. 5. 7. Renamed zBBall* to zBBall3D*. [zeo_bv3d_bball, zeo_mshape3d]
2021. 5. 7. Renamed zAABB* to zAABB3D*. [zeo_bv3d_aabb, zeo_col_box]
2021. 5. 6. Modified zBBall and zBBallPL to compute the actual radius without a margin. [zeo_bv3d_bball]