@@ -25,14 +25,14 @@ void output(zPH3D *a, zPH3D *b, zPH3D *c)
   fprintf( fp, "diffuse: 0.2 0.2 1.0\n" );
   fprintf( fp, "specular: 0.0 0.0 0.0\n" );
   fprintf( fp, "alpha: 1.0\n" );
-  fprintf( fp, "exp: 0.0\n\n" );
+  fprintf( fp, "esr: 0.0\n\n" );
   fprintf( fp, "[optic]\n" );
   fprintf( fp, "name: red\n" );
   fprintf( fp, "ambient: 0.6 0.2 0.2\n" );
   fprintf( fp, "diffuse: 1.0 0.2 0.2\n" );
   fprintf( fp, "specular: 0.0 0.0 0.0\n" );
   fprintf( fp, "alpha: 1.0\n" );
-  fprintf( fp, "exp: 0.0\n\n" );
+  fprintf( fp, "esr: 0.0\n\n" );
   fprintf( fp, "[shape]\n" );
   fprintf( fp, "name: a\n" );
   fprintf( fp, "type: polyhedron\n" );
@@ -52,7 +52,7 @@ void output(zPH3D *a, zPH3D *b, zPH3D *c)
   fprintf( fp, "diffuse: 1.0 0.2 0.2\n" );
   fprintf( fp, "specular: 0.0 0.0 0.0\n" );
   fprintf( fp, "alpha: 1.0\n" );
-  fprintf( fp, "exp: 0.0\n\n" );
+  fprintf( fp, "esr: 0.0\n\n" );
   fprintf( fp, "[shape]\n" );
   fprintf( fp, "name: a\n" );
   fprintf( fp, "type: polyhedron\n" );
