@@ -24,7 +24,7 @@ void output(zTri3D *t, zAABox3D *b, zVec3D ip[], int n)
   fprintf( fp, "diffuse: 0.2 0.2 1.0\n" );
   fprintf( fp, "specular: 0.0 0.0 0.0\n" );
   fprintf( fp, "alpha: 1.0\n" );
-  fprintf( fp, "exp: 0.0\n\n" );
+  fprintf( fp, "esr: 0.0\n\n" );
 
   fprintf( fp, "[optic]\n" );
   fprintf( fp, "name: red\n" );
@@ -32,7 +32,7 @@ void output(zTri3D *t, zAABox3D *b, zVec3D ip[], int n)
   fprintf( fp, "diffuse: 1.0 0.2 0.2\n" );
   fprintf( fp, "specular: 0.0 0.0 0.0\n" );
   fprintf( fp, "alpha: 0.5\n" );
-  fprintf( fp, "exp: 0.0\n\n" );
+  fprintf( fp, "esr: 0.0\n\n" );
 
   fprintf( fp, "[optic]\n" );
   fprintf( fp, "name: yellow\n" );
@@ -40,7 +40,7 @@ void output(zTri3D *t, zAABox3D *b, zVec3D ip[], int n)
   fprintf( fp, "diffuse: 1.0 1.0 0.2\n" );
   fprintf( fp, "specular: 0.0 0.0 0.0\n" );
   fprintf( fp, "alpha: 1.0\n" );
-  fprintf( fp, "exp: 0.0\n\n" );
+  fprintf( fp, "esr: 0.0\n\n" );
 
   fprintf( fp, "[shape]\n" );
   fprintf( fp, "name: plane\n" );
