@@ -12,7 +12,7 @@ void output(zPH3D *ph)
   fprintf( fp, "diffuse: 0.8 0.8 0.8\n" );
   fprintf( fp, "specular: 0.0 0.0 0.0\n" );
   fprintf( fp, "alpha: 0.8\n" );
-  fprintf( fp, "exp: 1.0\n\n" );
+  fprintf( fp, "esr: 1.0\n\n" );
 
   fprintf( fp, "[shape]\n" );
   fprintf( fp, "name: pyramid\n" );
