@@ -1,3 +1,5 @@
+2021. 5.15. Added zeo_delaunay2d. [app]
+2021. 5.15. Corrected key for specular reflection in examples and zeo_qhull. [example, app]
 2021. 5.15. Added zeo_delaunay2d and zDelaunay2D. [zeo, zeo_delaunay2d]
 2021. 5.15. Added zTri2DPointIsInside. [zeo_elem2d]
 2021. 5.15. Corrected mismatch between prototype and definition of zOBB3D and zOBB3DPL. [zeo_bv3d_obb]
